# hiq_python_class

./: .gitignore  LICENCE  README.md  pyproject.toml  test_class.py  test_class2.py  test_closesttozero.py  test_fizz.py  test_fizzbuzz.py  test_iv.py  test_python.py
.fleet/: run.json
aoc_1/: __init__.py  calories.py
hiq/: __init__.py  xmas.py
roman/: make_roman.py  test_roman.py
tests/: extras.py  longer_name_that_i_like_to_use.py  my_helper.py  test_python.py  test_v.py
